Clean up bad rebase induced merge conflicts (CORE-207, CORE-763)
Restores correct dependencies into various modules to get a clean build